syntax = "proto3";
package empowerchain.plasticcredit;

import "empowerchain/plasticcredit/types.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/empowerchain/empowerchain/x/plasticcredit";

// GenesisState defines the plasticcredit module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  IDCounters id_counters = 2 [(gogoproto.nullable) = false];
  repeated Issuer issuers = 3 [(gogoproto.nullable) = false];
  repeated IDCreditCollection credit_collections = 4;
  repeated IDCreditBalance credit_balances = 5;
  repeated Applicant applicants = 6 [(gogoproto.nullable) = false];
}